<resources>
    <string name="app_name">JAMB Prep Guide</string>
    <string name="logo_descriptor">Jamb Logo</string>
    <string name="btn_phone_signin">Sign in with phone number</string>
    <string name="btn_phone_reg">Register with phone number</string>
    <string name="btn_jamb_details">Register with JAMB details</string>
    <string name="hint_reg_fullname">Full name</string>
    <string name="hint_reg_phone">Phone</string>
    <string name="hint_reg_email">Email</string>
    <string name="hint_reg_password">Password</string>
    <string name="hint_reg_passwordagain">Password again</string>
    <string name="btn_reg_text">Register</string>
    <string name="txt_reg_title">Register with phone number</string>
    <string name="txt_reg_instructions">If you have registered for any JAMB examination, skip this stepby clicking continue, otherwise, complete the form below.</string>
    <string name="spin_reg_prompt">Gender</string>
    <string name="txt_startpage">Chemistry</string>
    <string name="txt_welcome_txt">Hello Chioma, you\'re about to begin a Chemistry test, the test is timed and blah blah.</string>
    <string name="btn_quizstart_txt">Start</string>
    <string name="toolbar_question_activity_title">Test</string>
    <string name="txt_question_sample">Which of the following gases is produced as a result of respiration in humans?</string>
    <string name="card_icon_desc">circle</string>
    <string name="card_title_txt">Title</string>
    <string name="txt_syllabus_header">Subjects</string>

    <string-array name="gender_text">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
