<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:fillViewport="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ahmad.jambprepguide.RegActivity">
    <LinearLayout
        android:id="@+id/activity_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/padding_reg_page"
        android:paddingRight="@dimen/padding_reg_page"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@android:color/background_light">
        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/jamb_logo"
            android:id="@+id/img_reg_logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_descriptor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_reg_title"
            android:text="@string/txt_reg_title"
            android:textStyle="normal|bold"
            android:textSize="@dimen/txt_reg_title_size"
            android:layout_margin="@dimen/txt_reg_margin" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_reg_instruction"
            android:text="@string/txt_reg_instructions"
            android:layout_margin="@dimen/txt_reg_margin" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reg_fullname"
            android:inputType="textPersonName"
            android:hint="@string/hint_reg_fullname"
            android:drawableStart="@drawable/male"
            android:drawableLeft="@drawable/male"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reg_phone"
            android:inputType="phone"
            android:hint="@string/hint_reg_phone"
            android:drawableStart="@drawable/phoni"
            android:drawableLeft="@drawable/phoni"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reg_number"
            android:inputType="number"
            android:hint="UTME Number"
            android:drawableStart="@drawable/phoni"
            android:drawableLeft="@drawable/phoni"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spin_reg_gender"
            android:prompt="@string/spin_reg_prompt"
            android:entries="@array/gender_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reg_age"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_reg_email"
            android:drawableStart="@drawable/cal"
            android:drawableLeft="@drawable/cal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reg_pass"
            android:inputType="textPassword"
            android:hint="@string/hint_reg_password"
            android:drawableStart="@drawable/locki"
            android:drawableLeft="@drawable/locki"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reg_passagain"
            android:inputType="textPassword"
            android:hint="@string/hint_reg_passwordagain"
            android:drawableStart="@drawable/locki"
            android:drawableLeft="@drawable/locki"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reg_text"
            android:id="@+id/btn_reg"
            android:background="@color/btn_reg_color"
            android:textColor="@android:color/background_light"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>
